fix letter spacing

--- a/product-preview/styles.css
+++ b/product-preview/styles.css
@@ -9,6 +9,7 @@ body {
   margin: 0 auto;
   border-radius: 15px;
   display: flex;
+  margin-top: 100px;
 }
 
 h1 {
@@ -17,6 +18,7 @@ h1 {
   font-size: 14px;
   padding-top: 20px;
   color: hsl(228, 12%, 48%);
+  letter-spacing: 0.2rem;
 }
 
 h2 {
@@ -36,6 +38,7 @@ h2 {
 
 img {
   width: 100%;
+  border-radius: 15px 0px 0px 15px;
 }
 .details {
   width: 40%;
@@ -69,4 +72,18 @@ button {
   color: hsl(228, 12%, 48%);
   text-decoration: line-through;
   display: inline;
+}
+
+.attribution {
+  text-align: center;
+  padding-top: 20px;
+}
+
+button:hover {
+  background-color: hsl(212, 21%, 14%);
+  cursor: pointer;
+}
+
+button:focus {
+  background-color: hsl(212, 21%, 14%);
 }
